# Energy-Ai-consumptions

./: .gitignore  API.py  BeaconsfieldCleaned.csv  COM6003-CW1.ipynb  DEC.py  EnergyCertificates.py  PreProcessing.py  README.md  gitignore  main.py  pyproject.toml  setup.ipynb
